<resources>
    <string name="app_name">TheFilmCollective</string>
    <string name="movie_title_label">Title</string>
    <string name="movie_title">Inception</string>
    <string name="movie_director_label">Director</string>
    <string name="movie_director">Christopher Nolan</string>
    <string name="movie_description_label">Description</string>
    <string name="movie_description">Inception is a 2010 science fiction action film written and directed by Christopher Nolan, who also produced the film with his wife, Emma Thomas. The film stars Leonardo DiCaprio as a professional thief who steals information by infiltrating the subconscious of his targets…</string>
    <string name="movie_earnings_label">Earnings</string>
    <string name="movie_earnings">100 000 000</string>
    <string name="movie_release_date_label">Release Date</string>
    <string name="movie_release_date">16/07/2010</string>
    <string name="movie_rating_label">Rating</string>
    <string name="movie_add_button">Submit</string>
    <string name="movie_edit_button">Save</string>

    <string name="menu_view_action">View</string>
    <string name="menu_movie_action">Add</string>

    <string name="nav_menu_movies">Movies</string>
    <string name="nav_menu_add">Contribute</string>
    <string name="nav_menu_favorites">Favorites</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">The Film Collective</string>
    <string name="nav_header_subtitle">The Home of Movies!</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="image_add_button">Add Image</string>
    <string name="change_image">Change Image</string>
    <string name="select_movie_image">Select Image of Movie</string>

    <string name="save_changes">Save Changes</string>

    <string name="action_movie">Movies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="search_bar_text">Search</string>

    <string name="messageLoading">Please wait while we Connect to the Server...</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="menu_movie_all">All Movies</string>

    <string name="select_profile_image">Select Profile Image</string>
</resources>