<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_movies"
            android:icon="@drawable/ic_menu_movie"
            android:title="@string/nav_menu_movies" />
        <item
            android:id="@+id/nav_add"
            android:icon="@drawable/ic_menu_add"
            android:title="@string/nav_menu_add" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_favorites"
            android:title="@string/nav_menu_favorites" />
        <item
            android:id="@+id/nav_report_all"
            android:icon="@drawable/ic_menu_movie_all"
            android:title="@string/menu_movie_all" />
        <item android:title="Access Control">
            <menu>
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:title="@string/sign_out" />
            </menu>
        </item>
    </group>

</menu>
